fixing center alignment in in-depth card

--- a/static/css/cards/in-depth.css
+++ b/static/css/cards/in-depth.css
@@ -17,3 +17,8 @@
 .in-depth .image-link-macro {
   position: initial;
 }
+
+.in-depth time,
+.in-depth .time {
+  flex: none;
+}
